# SC-Bot

./: .gitignore  CMakeLists.txt
libs/: Subprocess.h
src/: Hooks.cpp  Hooks.h  Nodes.cpp  PracticeFix.cpp  PracticeFix.h  Recorder.cpp  Recorder.h  RecorderLayer.cpp  RecorderLayer.h  Replay.cpp  Replay.h  ReplayLayer.cpp  ReplayLayer.h  ReplaySystem.cpp  ReplaySystem.h  SCManager.cpp  SCManager.h  Utils.cpp  Utils.h  Version.h.in  includes.h  main.cpp
